# federated-learning-mini-project

./: .gitignore  .pre-commit-config.yaml  README.md  git-workflow.sh  pyproject.toml  verify_etl.sh
.github/: .gitmessage
datashield_vignette/: docker-compose.yml  prepare_data.py
datashield_vignette/data/: sample_omop_data.pkl
etl_omop_fhir/: README.md  __init__.py  docker-compose.postgres.yml  run_etl.py
etl_omop_fhir/data/mappings/: fhir_to_omop.ini
etl_omop_fhir/data/raw/: Error.txt  SYNTHEA_README.yml  timestamp.txt
etl_omop_fhir/etl_engine/: __init__.py  base_etl.py  config.yaml  synthea_omop_mapper.py
etl_omop_fhir/notebooks/: 01_synthea_generation.ipynb  02_omop_mapping.ipynb
